Fixes existing gap on horizontal sidebar

--- a/src/styles/vertical.scss
+++ b/src/styles/vertical.scss
@@ -69,7 +69,7 @@ $tabitem-bias: 30px;
 }
 
 .app .app__content {
-  padding-top: $sidebar-width + $sidebar-bias;
+  padding-top: $sidebar-width;
 }
 
 .workspaces-drawer {
